<resources>
    <string name="app_name">Bcdn监控</string>

    <string name="home">首页</string>
    <string name="me">我的</string>
    <string name="wool">羊毛</string>

    <string name="tips_network_error">网络错误，点击重试</string>
    <string name="tips_network_empty">没有数据，点击重新加载</string>
    <string name="tips_refresh_error">刷新失败</string>
    <string name="today_income">今日收益:</string>
    <string name="total_income">总收益:</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="use_md5_password">使用 MD5 密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="add_account">添加帐号</string>
    <string name="tips_add_account_error">添加账号失败</string>
    <string name="tips_add_account_success">添加成功</string>
    <string name="tips_delete_account_success">删除成功</string>
    <string name="tips_delete_account_error">删除失败</string>
    <string name="tips_action_error">请求失败，请稍后重试</string>
    <string name="income_history">收入历史</string>
    <string name="income">收益:</string>
    <string name="tips_open_alipay_error">打开支付宝失败，请手动打开并领取红包</string>
    <string name="tips_update_title">发现新版本，是否要更新</string>
    <string name="tips_download_success">下载完成</string>
    <string name="dai_gua">代挂</string>
    <string name="coming_soon">敬请期待</string>
    <string name="tips">提示</string>
    <string name="tips_dai_gua">超级节点  6元/天  1.5ms延迟\n极速节点  5元/天  15ms延迟\n普通节点  3元/天  30-60ms延迟\n(延迟越高越容易掉线，推荐优质节点\n延迟是节点与挖矿服务器通信一次的时间)\n\n承诺：挂满一天低于正常收益30%退款，含 bcdn官方故障\n\n联系QQ 1125316526 或 微信 ittianyu\n(已复制qq号，打开qq添加好友即可)\n\n自助代挂系统开发中，敬请期待</string>
    <string name="miner_install">Linux 矿机安装教程</string>
    <string name="refresh">刷新</string>
    <string name="open_in_browser">浏览器中打开</string>
    <string name="about_us">关于我们</string>
    <string name="tips_about_us">© 2018 天宇工作室.版权所有\n\t\t\twww.ittianyu.com</string>
    <string name="open_source">开源地址</string>
    <string name="booking_w">w码预约</string>
    <string name="booking_s">s码预约</string>
    <string name="withdraw">提币</string>
    <string name="bind_s">绑定S码</string>
    <string name="tips_booked">您已经预约过了，请等待开奖</string>
    <string name="tips_booked_success">您已经成功抽到挖矿码，无法再次预约</string>
    <string name="tips_booking_again_error">再次预约失败</string>
    <string name="tips_booking_again_success">再次预约成功</string>
    <string name="bind_eth">绑定钱包地址</string>
    <string name="eth_address">eth 地址</string>
    <string name="gate_io_address">Gate.io 地址</string>
    <string name="tips_eth_empty">地址不能为空</string>
    <string name="tips_wrong_eth_address">Eth 地址错误</string>
    <string name="tips_no_enough_coins">没有足够的Bcdn币</string>
    <string name="tips_bind_eth_success">绑定成功</string>
    <string name="tips_token_timeout">Token 过期，请刷新后重试</string>
    <string name="s_code">请输入S码</string>
    <string name="tips_code_empty">码不能为空</string>
    <string name="tips_wrong_code">挖矿码不存在</string>
    <string name="withdraw_count">提币数量</string>
    <string name="withdraw_all">全部提取</string>
    <string name="total_coins">总资产:</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="verify_code">验证码</string>
    <string name="tips_field_empty">不能为空</string>
    <string name="tips_withdraw_success">提币成功，等待审核</string>
    <string name="withdraw_history">提现记录</string>
    <string name="withdraw_succsss">提现成功</string>
    <string name="withdraw_need_confirm">审核中</string>
    <string name="withdraw_need_error">审核中</string>
    <string name="batch_booking_w">批量预约w码</string>
    <string name="tips_no_account">请先添加账号</string>
    <string name="tips_batch_booking">共:%1$d, 预约成功:%2$d</string>
    <string name="yesterday_income">昨日收益</string>
    <string name="login_error">登录失败</string>
    <string name="delete">删除</string>
    <string name="suggestion_qq">意见反馈交流-QQ群</string>
    <string name="tips_suggestion_qq">QQ群号码 137413883\n(已复制号码，打开QQ申请入群)</string>
    <string name="tips_download_start">开始下载，下载进度请下拉顶部通知栏查看</string>
    <string name="copy_code_all">复制所有挖矿码</string>
    <string name="copy_code">复制挖矿码</string>
    <string name="tips_copy_code_success">复制成功</string>
    <string name="tips_no_permission_external">没有读写权限</string>
    <string name="total_balance">总余额:</string>
    <string name="total_income_today">今日总收益:</string>
    <string name="total_account_count">总账号:</string>
    <string name="total_miner_count">总矿机:</string>
    <string name="online_miner_count">在线矿机:</string>
    <string name="total_income_yesterday">昨日总收益</string>
    <string name="version">版本号</string>

</resources>
