<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGray"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/selector_item"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_github" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/coming_soon"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <com.ittianyu.bcdnwatcher.common.view.SettingItem
            android:id="@+id/si_dai_gua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/dai_gua" />

        <com.ittianyu.bcdnwatcher.common.view.SettingItem
            android:id="@+id/si_miner_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:title="@string/miner_install" />

        <com.ittianyu.bcdnwatcher.common.view.SettingItem
            android:id="@+id/si_open_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:title="@string/open_source" />

        <com.ittianyu.bcdnwatcher.common.view.SettingItem
            android:id="@+id/si_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:title="@string/about_us" />

    </LinearLayout>
</layout>
