<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_area_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@id/tv_area_code"
            android:text="12345678901"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:text="登录失败"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <TextView
            android:id="@+id/tv_yesterday_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="8dp"
            android:text="TextView"
            android:textColor="@color/colorDarkGray"
            tools:text="@string/yesterday_income" />

        <TextView
            android:id="@+id/tv_total_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="8dp"
            android:text="TextView"
            android:textColor="@color/colorDarkGray"
            tools:text="@string/total_income" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/v_miners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_booking_w"
            android:layout_marginEnd="8dp"
            android:text="@string/booking_w"
            style="@style/customButton" />

<!--        <Button
            android:id="@+id/btn_booking_s"
            style="@style/customButton"
            android:text="@string/booking_s" />-->

        <Button
            android:id="@+id/btn_withdraw_history"
            style="@style/customButton"
            android:text="@string/withdraw_history" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_draw_money"
            style="@style/customButton"
            android:layout_marginEnd="8dp"
            android:text="@string/draw_money" />

        <Button
            android:id="@+id/btn_bind_s"
            style="@style/customButton"
            android:text="@string/bind_s" />
    </LinearLayout>

</LinearLayout>